<resources>
    <string name="app_name">Housing</string>
    <string name="welcome_sir">Welcome to you sir ✨</string>
    <string name="welcome_back">Welcome Back…</string>
    <string name="enter_email_amp_password"><![CDATA[Enter email & password]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="new_user">New User</string>
    <string name="user_info">User Info</string>
    <string name="user_name">User Name</string>
    <string name="mobile">Mobile</string>
    <string name="national_number">National Number</string>
    <string name="family_members">Family Members</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="pick_an_image">Pick an Image</string>
    <string name="submit">Submit</string>
    <string name="employee_info">Employee Info</string>
    <string name="advertisement_info">Advertisement Info</string>
    <string name="new_employee">New Employee</string>
    <string name="new_advertisement">New Advertisement</string>
    <string name="info">Info</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="edit_users">Edit Users</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="edit_ads">Edit Ads</string>
    <string name="change_password">Change Password</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
    <string name="okay">Okay</string>
    <string name="choose_where_to_pick_the_image">Choose Where from to pick the image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="test_hint">Test Text</string>
    <string name="forget_my_password">Forget my password!</string>
    <string name="create_account">create account !</string>
    <string name="forget_your_password">Forget your password…</string>
    <string name="don_t_worry_will_help_you_restore_it">Don\'t worry will help you restore it</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete!</string>
    <string name="dashboard">Dashboard</string>
    <string name="new_operation">New Operation</string>
    <string name="operation_info">Operation Info</string>
    <string name="amount">The amount</string>
    <string name="details">Details</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="edit_operation">Edit Operation</string>


    <string-array name="actor_type">
        <item>Employee</item>
        <item>Resident</item>
    </string-array>

    <string-array name="category_id">
        <item>ResidentService: 1</item>
        <item>Salary: 2</item>
        <item>Purchases: 3</item>
        <item>Maintenance: 4</item>
    </string-array>
</resources>