<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_editUser"
        android:icon="@drawable/ic_users"
        android:title="@string/edit_users"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_editEmp"
        android:icon="@drawable/ic_edit_emp"
        android:title="@string/edit_employee"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_editAdv"
        android:icon="@drawable/ic_edit_ad"
        android:title="@string/edit_ads"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="always" />


</menu>