<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faze_sea"
    tools:context=".views.edit_forms.EditUserActivity">

    <!--Edit Prosper    -->
    <Spinner
        android:id="@+id/dropdown_menu_item_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_dropdown_dark_frame"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/btn_deleteUser"
        app:layout_constraintEnd_toEndOf="@id/g_end"
        app:layout_constraintStart_toStartOf="@id/g_start"
        app:layout_constraintTop_toBottomOf="@id/g_top"
        tools:ignore="SpeakableTextPresentCheck" />
    <!--Delete Btn    -->
    <Button
        android:id="@+id/btn_deleteUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/shiny_red"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/userEntryForm"
        app:layout_constraintEnd_toEndOf="@id/g_end"
        app:layout_constraintStart_toStartOf="@id/g_start"
        app:layout_constraintTop_toBottomOf="@id/dropdown_menu_item_id" />

    <!--ALL THE Guideline-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />
    <!--Me  -->

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/ic_mode_edit"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="@id/g_end"
        app:layout_constraintStart_toStartOf="@id/g_start"
        app:layout_constraintTop_toTopOf="@id/g_top"
        tools:ignore="ContentDescription,MissingPrefix" />

    <LinearLayout
        android:id="@+id/userEntryForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_user_form"

        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/g_end"
        app:layout_constraintStart_toStartOf="@id/g_start"
        app:layout_constraintTop_toTopOf="@+id/g_top">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/user_info"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <!--====================================================================================================        -->
        <!-- name,  email, mobile, national_number,  family_members,char gender ,MultipartBody.Part imagePart-->
        <!--====================================================================================================        -->
        <!-- Section 1    name    -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/user_name"
            android:tag="name"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/fade_black"
            app:boxStrokeColor="@color/golden_yellow"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="22"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--====================================================================================================        -->
        <!-- Section 2    email   -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            android:tag="@string/email"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/fade_black"
            app:boxStrokeColor="@color/golden_yellow"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="65"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--====================================================================================================        -->
        <!-- Section 3    mobile  -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/mobile"
            android:tag="mobile"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/fade_black"
            app:boxStrokeColor="@color/golden_yellow"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="30"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--====================================================================================================        -->
        <!-- Section 4    national_number    -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/national_number"
            android:tag="national_number"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/fade_black"
            app:boxStrokeColor="@color/golden_yellow"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/national_number_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="25"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--====================================================================================================        -->
        <!-- Section 5   family_members     -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/family_members"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/fade_black"
            app:boxStrokeColor="@color/golden_yellow"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/family_members_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--====================================================================================================        -->
        <!--Section 6  Gender      -->
        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="@color/sugar_white" />

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/sugar_white" />

        </RadioGroup>

        <Button
            android:id="@+id/btnPickImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/dark_pool"
            android:text="@string/pick_an_image" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_newUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="@id/g_bottom"
        app:layout_constraintEnd_toEndOf="@id/g_end"
        app:layout_constraintStart_toStartOf="@id/g_start" />

    <!--FOR THE SNACK_BAR-->
    <View
        android:id="@+id/snackBar_action"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>