<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fade_black"
    tools:context=".views.LoginActivity">

    <!--GuideLines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_top_start_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_start_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_end_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />
    <!--GuideLines-->

    <!--Welcome Fields-->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/h_clearWhite"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@id/horizontal_top_start_guide" />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_amp_password"
        android:textColor="#F0E6C8"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <!--DIVIDER-->
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1.75dp"
        android:layout_marginTop="20dp"
        android:background="@color/h_lessBlue"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guide"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle" />

    <!--EDIT TEXT Fields-->

    <!--EMAIL-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/con_email_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guide"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="45" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/con_password_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guide"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@id/con_email_edit_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--BUTTON-->
    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guide"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@id/con_password_edit_text" />

    <!--FOR THE SNACK_BAR-->
    <View
        android:id="@+id/snackBar_action"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guide"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
